# xcp-ng-build-env

./: .gitignore  Dockerfile-7.x  Dockerfile-8.x  Dockerfile-9.x  README.md  build.sh  build9.sh  pyproject.toml  run.py
.github/workflows/: code-checkers.yml  docker.yml  format.yaml  main.yaml  release.yml  requirements-check.yml  zizmor.yml
container/: Dockerfile-8.x  Dockerfile-9.x  build.sh
container/files/: Alma10-devel.repo  entrypoint.sh  init-container.sh  xcp-ng-8.99.repo
container/local-repo/: xcpsign-macros-1.0-1.local.noarch.rpm
container/local-repo/repodata/: 4ec92d8c1e0b35003514d4905037374cb733ba4ff9d44565684b21fee3d82555-filelists.xml.zst  730ba6b9e682b688eef66f6a5eabf737fa4a6b5bbadff75ca30be5c79ac1a591-other.xml.zst  968b6b4fe83ab95015935c7590386816389031fcd59b3a9e531b2929c851b1e1-filelists.xml.zst  a02c16bf8df0ee30cd502070788821cf0e1fcce74c7efe764a4dcdf7bb4ba0f9-primary.xml.zst  aa9579a9cd521bec82adb0830b6a754399d6f1602f6e5eec1c1dd3ec13460f33-primary.xml.zst  b97f320e0b1fa6838fac3dc514614b846ad774a54556d5ff607e01c33c0ae20a-other.xml.zst  repomd.xml
files/: Alma10-devel.repo  entrypoint.sh  init-container.sh  rpmmacros.9.0  xcp-ng-8.99.repo  xcp-ng.repo.8.x.in
requirements/: base.txt
src/xcp_ng_dev/: build.sh  cli.py
src/xcp_ng_dev/files/: Dockerfile-8.x  Dockerfile-9.x  init-container.sh
src/xcp_ng_dev/koji/: __init__.py  build.py
test/: test.sh
