[project]
name = "xcp-ng-dev"
description = "A tool to develop and build XCP-ng packages"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
dependencies = [
    "argcomplete",
]

[project.scripts]
xcp-ng-dev = "xcp_ng_dev.cli:main"

[project.urls]
Homepage = "https://github.com/xcp-ng/xcp-ng-build-env/"

[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
